infra/modules/alb/listeners.tf
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "Not Found"
      status_code  = "404"
    }
  }
}

resource "aws_lb_listener_rule" "axon" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.axon.arn
  }

  condition {
    path_pattern {
      values = ["/reason*"]
    }
  }
}

resource "aws_lb_listener_rule" "orbit" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 200

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.orbit.arn
  }

  condition {
    path_pattern {
      values = ["/dispatch*", "/health"]
    }
  }
}
